--- a/lesson-03-spring-mvc/pom.xml
+++ b/lesson-03-spring-mvc/pom.xml
@@ -67,6 +67,7 @@
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
+                    <url>http://80.78.254.253:8080/manager/text</url>
                     <path>/mvc-app</path>
                 </configuration>
             </plugin>
