--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>lesson-04-spring-boot</module>
         <module>lesson-05-hibernate</module>
         <module>lesson-06-hibernate-2</module>
+        <module>lesson-07-data</module>
     </modules>
 
 </project>
