--- a/lesson-07-data/src/main/resources/application.properties
+++ b/lesson-07-data/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/mvc-app
 server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_boot_app?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/gbBase?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
