--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>lesson-06-hibernate-2</module>
         <module>lesson-07-data</module>
         <module>lesson-8-thymeleaf</module>
+        <module>lesson-09-REST1</module>
     </modules>
 
 </project>
